tests/int/use_command/snapshots/integration__int__use_command__visibility__modules_visibility__private_mod_vis_r_e_grouped.snap
---
source: tests/int/use_command/visibility.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/modules
    - use
    - "visibility::private_mod"
    - "-r"
    - "-e"
    - "--grouped"
---
success: true
exit_code: 0
----- stdout -----
visibility::private_mod
 - crate::nesting::level1::level2::level3

----- stderr -----
