tests/int/use_command/snapshots/integration__int__use_command__visibility__modules_visibility__pub_crate_mod_vis_e_G.snap
---
source: tests/int/use_command/visibility.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - use
    - "visibility::pub_crate_mod"
    - "-e"
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
crate::visibility::pub_mod::greet

----- stderr -----
