tests/int/use_command/snapshots/integration__int__use_command__visibility__modules_visibility__pub_crate_mod_vis_r_e_format_grouped.snap
---
source: tests/int/use_command/visibility.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - use
    - "visibility::pub_crate_mod"
    - "-r"
    - "-e"
    - "--format"
    - grouped
---
success: true
exit_code: 0
----- stdout -----
visibility::pub_crate_mod
 - crate::visibility::pub_mod::greet

----- stderr -----
